Updates for 5.1 release

--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,7 @@ For a complete changelog, see:
 * https://github.com/yaml/pyyaml/commits/
 * https://bitbucket.org/xi/pyyaml/commits/
 
-4.1 (2018-06-26)
+5.1 (2019-??-??)
 ----------------
 
 * https://github.com/yaml/pyyaml/pull/35  -- Some modernization of the test running
@@ -18,13 +18,17 @@ For a complete changelog, see:
 * https://github.com/yaml/pyyaml/pull/62  -- Remove tox workaround for Travis CI
 * https://github.com/yaml/pyyaml/pull/63  -- Adding support to Unicode characters over codepoint 0xffff
 * https://github.com/yaml/pyyaml/pull/65  -- Support unicode literals over codepoint 0xffff
-* https://github.com/yaml/pyyaml/pull/74  -- Make pyyaml safe by default.
 * https://github.com/yaml/pyyaml/pull/75  -- add 3.12 changelog
 * https://github.com/yaml/pyyaml/pull/76  -- Fallback to Pure Python if Compilation fails
 * https://github.com/yaml/pyyaml/pull/84  -- Drop unsupported Python 3.3
 * https://github.com/yaml/pyyaml/pull/111 -- Remove commented out Psyco code
 * https://github.com/yaml/pyyaml/pull/149 -- Test on Python 3.7-dev
 * https://github.com/yaml/pyyaml/pull/158 -- Support escaped slash in double quotes "\/"
+
+3.13 (2018-07-05)
+-----------------
+
+* Resolved issues around PyYAML working in Python 3.7.
 
 3.12 (2016-08-28)
 -----------------
@@ -175,5 +179,5 @@ For a complete changelog, see:
 
 * Initial release.  The version number reflects the codename
   of the project (PyYAML 3000) and differentiates it from
-  the abandoned PyYaml module. 
+  the abandoned PyYaml module.
 
