--- a/README
+++ b/README
@@ -33,3 +33,11 @@ Submit bug reports and feature requests to the PyYAML bug tracker:
 PyYAML is written by Kirill Simonov <xi@resolvent.net>.  It is released
 under the MIT license. See the file LICENSE for more details.
 
+Codento fork details
+--------------------
+
+This fork is done to fix annoying deprecation error in 3.13 while we wait for
+a official 3.14 release.
+
+When 3.14 upstream is available, drop this and switch there.
+
